# anomalias-energia

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.py  pyproject.toml  requirements-deploy.txt  requirements.txt
notebooks/: analisis_beneficios.ipynb  ans.ipynb  as.ipynb  construccion_base.ipynb  construccion_serie_completa.ipynb  evaluacion_no_supervisado.ipynb  geolocalizacion_cali.ipynb
scripts/: generate_dummy_data.py  precompute_mahalanobis.py
src/: Dash.py  construccion_base.py  geolocalizacion.py  metricas_no_supervisado.py  modelos_supervisados.py  run_gaussian.py  run_isolation_forest.py
src/assets/: disico.css
src/pipe_expres/: build_anomalos.py  build_inspecciones.py  cusum_test.py  features.py  features_based.py  gaussiana_method.py  limpieza.py  limpieza_dir.py  loader.py  markov_regimes_anomaly.py  series_anomalas.py  time_series_ml.py
