[project]
name = "disico-anomalies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "coverage>=7.13.5",
    "dash>=4.1.0",
    "flake8>=7.3.0",
    "geopy>=2.4.1",
    "ipykernel==6.29.4",
    "jupyter==1.0.0",
    "kmodes>=0.12.2",
    "lightgbm>=4.6.0",
    "llvmlite==0.43.0",
    "matplotlib==3.8.4",
    "numba==0.60.0",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas==2.2.2",
    "pmdarima==2.1.1",
    "prophet==1.3.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=0.5.1",
    "pyts==0.13.0",
    "ruff==0.4.3",
    "scikit-learn==1.4.2",
    "seaborn==0.13.2",
    "sphinx>=9.1.0",
    "statsmodels==0.14.6",
    "tqdm==4.66.4",
    "tsfresh>=0.21.1",
    "tslearn==0.6.3",
    "umap-learn>=0.5.7",
]

[tool.ruff]
exclude = ["*.md", ".venv"]
